cluster/core/rook-ceph/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  labels:
    app.kubernetes.io/instance: rook-ceph-mgr-dashboard
    app.kubernetes.io/name: rook-ceph-mgr-dashboard
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://www.edgenexus.io/wp-content/uploads/2021/06/ceph-logo.png"
    forecastle.stakater.com/network-restricted: "true"
spec:
  # ingressClassName: "traefik"
  rules:
  - host: "rook.${SECRET_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              name: http-dashboard
  tls:
  - hosts:
    - "rook.${SECRET_DOMAIN}"
